Fix flash on Mobile & Ipad

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -563,6 +563,14 @@ body{
 
 }
 
+@media (min-width: 2000px) { 
 
+p {
+	font-size: 18px;
+}
 
-@media (min-width: @screen-lg-min) { ... }
+.about-text-box{
+	height: 710px;
+}
+
+}
